--- a/index.html
+++ b/index.html
@@ -24,59 +24,10 @@
       integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
       crossorigin=""
     ></script>
-
-    <style>
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-      }
-      .leaflet-container {
-        height: 400px;
-        width: 600px;
-        max-width: 100%;
-        max-height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div id="map" style="width: 100%; height: 100%"></div>
-    <script>
-      const map = L.map('map').setView([39.92, 32.854], 5)
-
-      const tiles = L.tileLayer(
-        'https://tile.openstreetmap.org/{z}/{x}/{y}.png',
-        {
-          maxZoom: 14,
-          minZoom: 6,
-          attribution:
-            '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }
-      ).addTo(map)
-
-      var lon = Math.floor(Math.random() * (4300 - 2700) + 2700) / 100
-      var lat = Math.floor(Math.random() * (4100 - 3700) + 3700) / 100
-      console.log(lon)
-      console.log(lat)
-
-      const marker = L.marker([lat, lon])
-        .addTo(map)
-        .bindPopup('<b>Hello world!</b><br />I am a popup.')
-      // .openPopup()
-
-      const popup = L.popup()
-        .setLatLng([39.935, 32.854])
-        .setContent('I am a standalone popup.')
-      // .openOn(map)
-
-      function onMapClick(e) {
-        popup
-          .setLatLng(e.latlng)
-          .setContent(`You clicked the map at ${e.latlng.toString()}`)
-          .openOn(map)
-      }
-
-      map.on('click', onMapClick)
-    </script>
+    <script src="src/script.js"></script>
   </body>
 </html>
