--- a/index.html
+++ b/index.html
@@ -5,118 +5,134 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Leaflet Map Example</title>
+    <title>Leaflet Map Demo</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="src/img/favicon.svg" />
-    <!-- bootstrap css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <!-- bootstrap icons -->
+    <!-- <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="docs/images/favicon.ico"
+    /> -->
+
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-    />
-    <!-- leaflet css -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
-      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
       crossorigin=""
     />
-    <!-- leaflet js -->
     <script
-      src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+      src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""
     ></script>
-    <link rel="stylesheet" href="src/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+      }
+      .leaflet-container {
+        height: 100%;
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+      }
+      #hello {
+        background-color: #f0f0f0;
+        border-radius: 10%;
+        padding: 0.01rem;
+        width: 150px;
+        text-align: center;
+        display: none;
+        left: var(--mouse-x);
+        top: var(--mouse-y);
+      }
+    </style>
   </head>
   <body>
-    <!-- navbar -->
-    <nav class="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
-          <i class="bi bi-geo-alt"></i> Leaflet MAP</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="offcanvas offcanvas-end"
-          tabindex="-1"
-          id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel"
-        >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              <i class="bi bi-person-lines-fill"></i> Contact Info
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="https://aburakt.com"
-                  target="_blank"
-                  ><i class="bi bi-browser-safari"></i> Website</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="https://github.com/aburakt"
-                  target="_blank"
-                  ><i class="bi bi-github"></i> GitHub</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="https://linkedin.com/in/aburakt"
-                  target="_blank"
-                  ><i class="bi bi-linkedin"></i> Linkedin</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="mailto:info@aburakt.com"
-                  target="_blank"
-                  ><i class="bi bi-envelope"></i> via Mail</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <!-- map -->
-    <div id="map" style="width: 100%; height: 93%"></div>
-    <!-- base script -->
-    <script src="src/script.js"></script>
-    <!-- bootstrap js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    <div id="map" style="width: 100%; height: 100%"></div>
+    <div id="hello" style="width: auto; display: none">
+      <h6 id="hi">Hello World</h6>
+    </div>
+    <script>
+      // map settings
+      const map = L.map('map').setView([38.2, 34.6], 0)
+
+      const tiles = L.tileLayer(
+        'https://tile.openstreetmap.org/{z}/{x}/{y}.png',
+        {
+          maxZoom: 14,
+          minZoom: 6,
+          attribution:
+            '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+        }
+      ).addTo(map)
+
+      let mClick = document.documentElement
+
+      mClick.addEventListener('mouseup', (e) => {
+        mClick.style.setProperty('--mouse-x', e.clientX + 'px')
+        mClick.style.setProperty('--mouse-y', e.clientY + 'px')
+      })
+
+      // random markers
+      function RandomMarker(number) {
+        for (let i = 0; i < number; i++) {
+          const lat = Math.floor(Math.random() * (4100 - 3700) + 3700) / 100
+          const lon = Math.floor(Math.random() * (4300 - 2700) + 2700) / 100
+          console.log('Boylam:', lat, '| Enlem:', lon)
+
+          const marker = L.marker([lat, lon]).addTo(map)
+
+          marker.on('click', function clickInfo() {
+            if (hello.style.display === 'block') {
+              hello.style.display = 'none'
+            } else {
+              hello.style.display = 'block'
+              let hi = document.getElementById('hello')
+              hi.innerHTML = `<b>Merhaba, burası</b><br />enlem: ${lat} - boylam: ${lon}`
+              hi.classList.add(
+                'leaflet-pane',
+                'leaflet-popup-pane',
+                'leaflet-popup',
+                'leaflet-zoom-animated'
+              )
+            }
+          })
+        }
+      }
+      RandomMarker(25)
+
+      //   const popup = L.popup()
+      //     .setLatLng([38, 34])
+      //     .setContent('I am a standalone popup.')
+      //     .openOn(map)
+
+      //   function onMapClick(e) {
+      //     popup
+      //       .setLatLng(e.latlng)
+      //       .setContent(`You clicked the map at ${e.latlng.toString()}`)
+      //       .openOn(map)
+      //   }
+
+      //   map.on('click', onMapClick)
+    </script>
+
+    <!-- <script>
+      $(document).ready(function () {
+        $(map).click(function (e) {
+          $('#hello')
+            .show()
+            .text('At location - X: ' + e.latlng + ' Y:' + e.pageY)
+            .css({
+              position: 'absolute',
+              color: '#fff',
+              left: e.pageX,
+              top: e.pageY
+            })
+        })
+      })
+    </script> -->
   </body>
 </html>
