--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Leaflet Map Demo</title>
-
+		<!-- Font CSS -->
 		<link
 			rel="stylesheet"
 			type="text/css"
@@ -31,7 +31,7 @@
 				height: 100%;
 				margin: 0;
 				font-family: "Open Sans";
-				font-size: 14px;
+				font-size: 12px;
 			}
 
 			.leaflet-container {
