--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
 			rel="stylesheet"
 			href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
 			integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-			crossorigin=""
 		/>
 		<!-- Leaflet JS -->
 		<script
 			src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
 			integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-			crossorigin=""
 		></script>
 	</head>
 	<body>
 		<!-- Leaflet main div -->
 		<div id="map"></div>
 		<!-- Popup div -->
-		<div id="hello">
-			<span>Hello World</span>
+		<div id="popup">
+			<span>Popup Div</span>
 		</div>
+		<!-- Scripts -->
 		<script src="src/script.js"></script>
 	</body>
 </html>
