--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 			rel="stylesheet"
 			type="text/css"
 			href="//fonts.googleapis.com/css?family=Open+Sans"
+			crossorigin=""
 		/>
 		<!-- Leaflet CSS -->
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
 			integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+			crossorigin=""
 		/>
 		<!-- Leaflet JS -->
 		<script
